k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-container
        image: cmathyz/tp-k8s-app:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/config.json
          subPath: config.json
      volumes:
      - name: config-volume
        configMap:
          name: app-config
