k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tp-app-service
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
