k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: default
spec:
  gatewayClassName: nginx 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing
  namespace: default
spec:
  parentRefs:
  - name: prod-gateway
  hostnames:
  - "monapp.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        [cite_start]value: /api 
    backendRefs:
    - name: my-app-api-service
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        [cite_start]value: / # Route par défaut vers l'application principale [cite: 144]
    backendRefs:
    - name: my-app-main-service
      port: 3000
